Different array element

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <p>Closure is a combination of function bundled together (enclosed) with references to its surrounding state (the lexical environment).</p>
     <p>closure gives you access to an outer functions variable and functions from an inner function</p>
 
-    
-    <script src="closure.js"></script>
+
+    <!-- <script src="closure.js"></script> -->
+    <script src="diffArrayElement.js"></script>
+
 </body>
 </html>
