check promise with async await

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 
     <!-- <script src="closure.js"></script> -->
-    <script src="diffArrayElement.js"></script>
+    <!-- <script src="diffArrayElement.js"></script> -->
+     <!-- <script src="palindrome.js"></script> -->
+     <script src="promises_async_await.js"></script>
 
 </body>
 </html>
