anagrams to check sting, special char

--- a/index.html
+++ b/index.html
@@ -4,15 +4,32 @@
     <title>JavaScript Test</title>
 </head>
 <body>
-    <h2>Closure -</h2>
-    <p>Closure is a combination of function bundled together (enclosed) with references to its surrounding state (the lexical environment).</p>
-    <p>closure gives you access to an outer functions variable and functions from an inner function</p>
+    <h2>Javascript interview prpparation for below points -</h2>
+    <ul>
+        <li>Closure</li>
+        <li>Differnt Array Element</li>
+        <li>Palindrome</li>
+        <li>Promise Async await</li>
+        <li>Anagram</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
+        <li>Closure</li>
 
+
+    </ul>
 
     <!-- <script src="closure.js"></script> -->
     <!-- <script src="diffArrayElement.js"></script> -->
      <!-- <script src="palindrome.js"></script> -->
-     <script src="promises_async_await.js"></script>
+     <!-- <script src="promises_async_await.js"></script> -->
+      <!-- <script src="promises_async_await2.js"></script> -->
+      <script src="anagram.js"></script>
 
 </body>
 </html>
