--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>Palindrome</li>
         <li>Promise Async await</li>
         <li>Anagram</li>
-        <li>Closure</li>
+        <li>Array Chunk</li>
         <li>Closure</li>
         <li>Closure</li>
         <li>Closure</li>
@@ -29,7 +29,8 @@
      <!-- <script src="palindrome.js"></script> -->
      <!-- <script src="promises_async_await.js"></script> -->
       <!-- <script src="promises_async_await2.js"></script> -->
-      <script src="anagram.js"></script>
+      <!-- <script src="anagram.js"></script> -->
+       <script src="array_chunkInGroup.js"></script>
 
 </body>
 </html>
