--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li>Promise Async await</li>
         <li>Anagram</li>
         <li>Array Chunk</li>
-        <li>Closure</li>
+        <li>Array Flattern</li>
         <li>Closure</li>
         <li>Closure</li>
         <li>Closure</li>
@@ -26,11 +26,12 @@
 
     <!-- <script src="closure.js"></script> -->
     <!-- <script src="diffArrayElement.js"></script> -->
-     <!-- <script src="palindrome.js"></script> -->
-     <!-- <script src="promises_async_await.js"></script> -->
-      <!-- <script src="promises_async_await2.js"></script> -->
-      <!-- <script src="anagram.js"></script> -->
-       <script src="array_chunkInGroup.js"></script>
+    <!-- <script src="palindrome.js"></script> -->
+    <!-- <script src="promises_async_await.js"></script> -->
+    <!-- <script src="promises_async_await2.js"></script> -->
+    <!-- <script src="anagram.js"></script> -->
+    <!-- <script src="array_chunkInGroup.js"></script> -->
+    <script src="array_flattern.js"></script>
 
 </body>
 </html>
