--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- <script src="promises_async_await2.js"></script> -->
     <!-- <script src="anagram.js"></script> -->
     <!-- <script src="array_chunkInGroup.js"></script> -->
-    <script src="array_flattern.js"></script>
+    <!-- <script src="array_flattern.js"></script> -->
+    <script src="array_value_frequency.js"></script>
 
 </body>
 </html>
