--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- <script src="anagram.js"></script> -->
     <!-- <script src="array_chunkInGroup.js"></script> -->
     <!-- <script src="array_flattern.js"></script> -->
-    <script src="array_value_frequency.js"></script>
-
+    <!-- <script src="array_value_frequency.js"></script> -->
+    <script src="duplicate_string.js"></script>
 </body>
 </html>
