string upper case

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- <script src="array_chunkInGroup.js"></script> -->
     <!-- <script src="array_flattern.js"></script> -->
     <!-- <script src="array_value_frequency.js"></script> -->
-    <script src="duplicate_string.js"></script>
+    <!-- <script src="duplicate_string.js"></script> -->
+    <script src="uppercase_in_string.js"></script>
 </body>
 </html>
