--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- <script src="array_value_frequency.js"></script> -->
     <!-- <script src="duplicate_string.js"></script> -->
     <!-- <script src="uppercase_in_string.js"></script> -->
-    <script src="zero_sum.js"></script>
+    <!-- <script src="zero_sum.js"></script> -->
+    <script src="this.js"></script>
 </body>
 </html>
