string sort, find max, string repeat, swap number example

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>JavaScript Test</title>
 </head>
 <body>
-    <h2>Javascript interview prpparation for below points -</h2>
+    <h2>Javascript interview preparation for below points -</h2>
     <ul>
         <li>Closure</li>
         <li>Differnt Array Element</li>
@@ -36,6 +36,7 @@
     <!-- <script src="duplicate_string.js"></script> -->
     <!-- <script src="uppercase_in_string.js"></script> -->
     <!-- <script src="zero_sum.js"></script> -->
-    <script src="this.js"></script>
+    <!-- <script src="this.js"></script> -->
+     <script src="swap_number.js"></script>
 </body>
 </html>
